--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Custom parser for qTest to aggregrate serenity results",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/ErnestoLCortez/serenity-qtest-parser/issues"
   },
-  "homepage": "https://github.com/ErnestoLCortez/serenity-qtest-parser#readme"
+  "homepage": "https://github.com/ErnestoLCortez/serenity-qtest-parser#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
+  }
 }
